--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!----------------------------------------------------------- Image -------------------------------------------------->
 <!-- From bootstrap website: https://getbootstrap.com/docs/4.0/components/carousel/ -->
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="https://i.imgur.com/9qBgthI.jpg?3" alt="First slide">
@@ -34,7 +34,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
   <!-- <div class="flex-container">
           <div style="flex-grow: 8">
           <img src="/Users/Yashira/sei-remote-flex-may/unit_1/w04d03/lesson-notes/chicago_school_finder_app/City_of_Chicago.jpg" class="" alt="Responsive image">  
